Fix alignment of menu button to better match close button

--- a/wp-content/themes/cae/assets/css/main.css
+++ b/wp-content/themes/cae/assets/css/main.css
@@ -2733,7 +2733,7 @@ button, .btn, input[type="submit"] {
     vertical-align: top; }
   @media (min-width: 1300px) {
     .banner .pull-right {
-      margin-right: -5em; } }
+      margin-right: -3em; } }
 
 #fixed {
   position: fixed;
