--- a/wp-content/themes/cae/assets/scss/partials/_header.scss
+++ b/wp-content/themes/cae/assets/scss/partials/_header.scss
@@ -27,7 +27,7 @@
 			}
 		}
 		.pull-right {
-			margin-right: -5em;
+			margin-right: -3em;
 		}
 	}
 }
